-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
Qt Creator 7.0.0
-
None
-
-
86708dbdde (qt-creator/qt-creator/master)
A couple of tooltips in Qt Creator, contain rich text (HTML). These tooltips tend to have line breaks in unfavorable places, making the content sometimes hard to read.
Another issue with some tooltips is that they show key/value definitions in a <table>, wich, especially with longer keys makes looking up the value quite hard. Also the length of the key column is dependent on the (translated) content.
A better alternative is to use "description lists" <dl>, which indent the values nicely independent from the key length.